Archive2/27/f99fee8c8b6e75/output
main.cpp: In function 'int main()':
main.cpp:11:7: error: use of deleted function 'B::B()'
     B();
       ^
main.cpp:3:8: note: 'B::B()' is implicitly deleted because the default definition would be ill-formed:
 struct B
        ^
main.cpp:3:8: error: uninitialized const member in 'struct B'
main.cpp:5:15: note: 'const int B::value' should be initialized
     const int value;
               ^
